# mvp_character_list

./: .gitignore  README.md  pyproject.toml
app/: cli.py
app/api/: main.py  routes.py
app/core/: equipment.py  models.py  optimizer.py  point_buy.py  rules.py
app/data/: cache.py  dnd_client.py  mappers.py
app/llm/: models.py  providers.py  service.py
app/web/: app.js  index.html  styles.css
tests/: test_api_ui.py  test_equipment_options.py  test_llm.py  test_mechanics.py  test_point_buy.py  test_skills.py
